# yel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  greek_recipe_convo.sh  interrupt_with_timeout.sh  transcribe_reply.sh  two_turn_chain.sh
src/agent_say/: __init__.py  api.py  audio.py  cli.py  config.py  errors.py  runner.py  transcribe.py  tts.py  ui.py  vad.py
src/yel/: __init__.py  api.py  audio.py  cli.py  config.py  errors.py  runner.py  transcribe.py  ui.py  vad.py
src/yel/native/: speech_transcriber.swift
tests/: test_api.py  test_cli.py  test_config.py  test_find_dotenv.py  test_monitor_buffer.py  test_no_speaker_output.py  test_runner_transcribe.py  test_transcribe.py  test_tts.py  test_vad_state_machine.py  test_virtual_output.py
