[project]
name = "yel"
version = "0.1.0"
description = "CLI tool for scripting spoken turns against local voice agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "sounddevice>=0.4",
  "numpy>=1.26",
  "webrtcvad-wheels>=2.0",
  "websockets>=12.0",
]

[project.scripts]
yel = "agent_say.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_say", "src/yel"]

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["sounddevice", "webrtcvad"]
ignore_missing_imports = true
