[project]
name = "yel"
version = "0.1.0"
description = "CLI tool for scripting spoken turns against local voice agents."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Dmitry B" }]
keywords = ["audio", "cli", "speech", "voice-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.11"
dependencies = [
  "typer>=0.27.0",
  "rich>=13.7",
  "pydantic>=2.0",
  "sounddevice>=0.4",
  "numpy>=1.26",
  "webrtcvad-wheels>=2.0",
]

[project.urls]
Homepage = "https://github.com/dmitri-b/yel"
Repository = "https://github.com/dmitri-b/yel.git"
Issues = "https://github.com/dmitri-b/yel/issues"

[project.scripts]
yel = "yel.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yel"]

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["sounddevice", "webrtcvad"]
ignore_missing_imports = true
